tests/ast_interpreter/err_duplicate_function.expected
<string>:4:5: error: function main already defined
fun main(a) {
    ^^^^
